[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Metronome.gd" type="Script" id=1]

[node name="Metronome" type="Node2D" groups=[
"STools",
]]
script = ExtResource( 1 )

[node name="BackGround" type="Node2D" parent="."]
position = Vector2( 0, 20 )

[node name="Panel3" type="Panel" parent="BackGround"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 245.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="BackGround"]
margin_left = 2.5
margin_top = 2.5
margin_right = 242.5
margin_bottom = 92.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BackGround"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 7.5
margin_top = 7.5
margin_right = 237.5
margin_bottom = 87.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="ColorRect" parent="."]
margin_left = 15.0
margin_top = 80.0
margin_right = 140.0
margin_bottom = 100.0
color = Color( 0.211765, 0.211765, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 15.0
margin_bottom = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Panel2"]
margin_left = 20.0
margin_top = 5.0
margin_right = 30.0
margin_bottom = 15.0

[node name="ColorRect3" type="ColorRect" parent="Panel2"]
margin_left = 35.0
margin_top = 5.0
margin_right = 45.0
margin_bottom = 15.0

[node name="ColorRect4" type="ColorRect" parent="Panel2"]
margin_left = 50.0
margin_top = 5.0
margin_right = 60.0
margin_bottom = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="Panel2"]
margin_left = 65.0
margin_top = 5.0
margin_right = 75.0
margin_bottom = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="Panel2"]
margin_left = 80.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect7" type="ColorRect" parent="Panel2"]
margin_left = 95.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect8" type="ColorRect" parent="Panel2"]
margin_left = 110.0
margin_top = 5.0
margin_right = 120.0
margin_bottom = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackPage" type="ColorRect" parent="."]
margin_right = 245.0
margin_bottom = 20.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackPage"]
margin_left = 5.0
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
text = "Metronome"

[node name="Close" type="Button" parent="."]
margin_left = 225.0
margin_right = 245.0
margin_bottom = 20.0
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Button" parent="."]
margin_left = 205.0
margin_right = 225.0
margin_bottom = 20.0
text = "_"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="."]
margin_right = 205.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 155.0
margin_top = 40.0
margin_right = 196.0
margin_bottom = 60.0
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RPM" type="LineEdit" parent="."]
margin_left = 87.0
margin_top = 40.0
margin_right = 145.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 15.0
margin_top = 40.0
margin_right = 89.0
margin_bottom = 64.0
min_value = 0.001
step = 0.001
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Started" type="ColorRect" parent="."]
margin_left = 200.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 100.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Hide" to="." method="_on_Hide_pressed"]
[connection signal="button_down" from="Move" to="." method="_on_Move_button_down"]
[connection signal="button_up" from="Move" to="." method="_on_Move_button_up"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]
